infra/kubernetes/ingress/headers.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: public-headers
spec:
  headers:
    contentTypeNosniff: true
    frameDeny: true
    referrerPolicy: no-referrer
    stsSeconds: 31536000
    stsIncludeSubdomains: true
    forceSTSHeader: true
    customRequestHeaders:
      X-Real-IP: ""
      X-Forwarded-Host: api.noebs.sd
      X-Forwarded-Proto: https
      X-Forwarded-Port: "443"
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: keycloak-source
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-For: ""
      X-Real-IP: ""
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: compress
spec:
  compress: {}
